// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sizes-2);
  width: var(--sizes-2);
}

.sxib16r-yd47z {
  margin-left: var(--space-2);
}

.sx03kze-e0n2q {
  opacity: 0;
  transition: opacity 150ms;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-c4y3k {
  justify-content: center;
  opacity: 1;
  position: absolute;
  transition: opacity 150ms;
}

.sxe5oww {
  animation-name: sxwho2l;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  background-color: currentColor;
  border-radius: var(--radii-round);
}

.sxe5oww:nth-child(1) {
  animation-delay: -300ms;
}

.sxe5oww:nth-child(2) {
  animation-delay: -150ms;
}

.sxe5oww:nth-child(3) {
  animation-delay: 0;
}

.sxe5oww4btw3--size-md {
  height: 6px;
  width: 6px;
  margin-left: 2px;
  margin-right: 2px;
}

.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0lmkcj--isRounded-true {
  border-radius: var(--radii-round);
}

.sxegjw02jpbs--isLoading-true {
  cursor: not-allowed;
  opacity: 0.5;
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxegjw08heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxegjw08heda--c2:not([disabled]):hover,
.sxegjw08heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxegjw08heda--c2:active {
  color: var(--colors-primary500);
}

.sxegjw08heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxegjw008yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxegjw008yia--c2:not([disabled]):hover,
.sxegjw008yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxegjw008yia--c2:active {
  color: var(--colors-secondary500);
}

.sxegjw008yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-primary sxegjw003kze--appearance-solid sxegjw0fz3et--size-md sxegjw02jpbs--isLoading-true sxegjw0xyrog--c2"
    type="button"
  >
    <div
      class="sx2cs53 sx2cs53-c4y3k"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
    </div>
    <span
      class="sx03kze sx03kze-e0n2q"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-primary sxegjw003kze--appearance-solid sxegjw0fz3et--size-md sxegjw0xyrog--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sizes-2);
  width: var(--sizes-2);
}

.sxib16r-yd47z {
  margin-left: var(--space-2);
}

.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxegjw08heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxegjw08heda--c2:not([disabled]):hover,
.sxegjw08heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxegjw08heda--c2:active {
  color: var(--colors-primary500);
}

.sxegjw08heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxegjw008yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxegjw008yia--c2:not([disabled]):hover,
.sxegjw008yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxegjw008yia--c2:active {
  color: var(--colors-secondary500);
}

.sxegjw008yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-primary sxegjw003kze--appearance-solid sxegjw0fz3et--size-md sxegjw0xyrog--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxib16r sxib16rmbqqh--size-md sxib16r-yd47z"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxegjw08heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxegjw08heda--c2:not([disabled]):hover,
.sxegjw08heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxegjw08heda--c2:active {
  color: var(--colors-primary500);
}

.sxegjw08heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-primary sxegjw003kze--appearance-solid sxegjw0fz3et--size-md sxegjw0xyrog--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxegjw08heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxegjw08heda--c2:not([disabled]):hover,
.sxegjw08heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxegjw08heda--c2:active {
  color: var(--colors-primary500);
}

.sxegjw08heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxegjw008yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxegjw008yia--c2:not([disabled]):hover,
.sxegjw008yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxegjw008yia--c2:active {
  color: var(--colors-secondary500);
}

.sxegjw008yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-secondary sxegjw003kze--appearance-outline sxegjw0fz3et--size-md sxegjw008yia--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxegjw08heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxegjw08heda--c2:not([disabled]):hover,
.sxegjw08heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxegjw08heda--c2:active {
  color: var(--colors-primary500);
}

.sxegjw08heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-primary sxegjw003kze--appearance-outline sxegjw0fz3et--size-md sxegjw08heda--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sizes-2);
  width: var(--sizes-2);
}

.sxib16r-yd47z {
  margin-left: var(--space-2);
}

.sxegjw0 {
  all: unset;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  white-space: nowrap;
  width: max-content;
}

.sxegjw0[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxegjw0fz3et--size-md {
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxegjw0lmkcj--isRounded-true {
  border-radius: var(--radii-round);
}

.sxegjw0xyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxegjw0xyrog--c2:not([disabled]):hover,
.sxegjw0xyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxegjw0xyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxegjw0xyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxegjw08heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxegjw08heda--c2:not([disabled]):hover,
.sxegjw08heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxegjw08heda--c2:active {
  color: var(--colors-primary500);
}

.sxegjw08heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxegjw008yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxegjw008yia--c2:not([disabled]):hover,
.sxegjw008yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxegjw008yia--c2:active {
  color: var(--colors-secondary500);
}

.sxegjw008yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxegjw0 sxegjw003kze--theme-primary sxegjw003kze--appearance-solid sxegjw0fz3et--size-md sxegjw0lmkcj--isRounded-true sxegjw0xyrog--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxib16r sxib16rmbqqh--size-md sxib16r-yd47z"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
